// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sheet /> should open 1`] = `
<Sheet
  allowClose={true}
  animation={{}}
  backdrop={true}
  className={null}
  contentClassName={null}
  duration={300}
  isLoading={false}
  isOpen={true}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
  showSearch={false}
  title="Test-Title"
>
  <section
    className="ui-shared__sheet css-1owavz5"
  >
    <DrawerWithStyles
      animation={
        {
          "duration": 300,
          "in": "css-1ldjh2f",
          "out": "css-171mdnt",
        }
      }
      className="css-1447nbj"
      isOpen={true}
      onClose={[Function]}
      onDidClose={[Function]}
      onDidOpen={[Function]}
      onOpen={[Function]}
    >
      <Drawer
        animation={
          {
            "duration": 300,
            "in": "css-1ldjh2f",
            "out": "css-171mdnt",
          }
        }
        className="css-1447nbj"
        classes={
          {
            "animationIn": "tss-25le8d-Drawer-animationIn",
            "animationOut": "tss-1lx1x7x-Drawer-animationOut",
            "container": "tss-2b150r-Drawer-container",
          }
        }
        isOpen={true}
        onClose={[Function]}
        onDidClose={[Function]}
        onDidOpen={[Function]}
        onOpen={[Function]}
      >
        <div
          aria-modal={true}
          className="css-1447nbj tss-2b150r-Drawer-container css-1ldjh2f common__drawer"
          onAnimationEnd={[Function]}
          role="dialog"
          style={
            {
              "animationDuration": "300ms",
            }
          }
          tabIndex={-1}
        >
          <Header
            allowClose={true}
            handleChange={[Function]}
            onToggleClose={[Function]}
            shadow={false}
            showSearch={false}
            title="Test-Title"
          >
            <div
              className=""
            >
              <GridWithStyles
                className="css-1hncgty"
                component="div"
                wrap={false}
              >
                <Grid
                  className="css-1hncgty"
                  classes={
                    {
                      "noWrap": "tss-18pnfnt-Grid-noWrap",
                      "root": "tss-ttd1ja-Grid-root",
                      "wrap": "tss-xzd4nf-Grid-wrap",
                    }
                  }
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1hncgty tss-ttd1ja-Grid-root css-1hncgty common__grid tss-18pnfnt-Grid-noWrap"
                    classes={
                      {
                        "noWrap": "tss-18pnfnt-Grid-noWrap",
                        "root": "tss-ttd1ja-Grid-root",
                        "wrap": "tss-xzd4nf-Grid-wrap",
                      }
                    }
                  >
                    <button
                      aria-label="common.close"
                      className="css-r4gt00"
                      onClick={[Function]}
                      type="button"
                    >
                      <RippleWithStyles
                        className="css-ugy6xl"
                      >
                        <Ripple
                          className="css-ugy6xl"
                          classes={
                            {
                              "container": "tss-1dfkr3n-Ripple-container",
                            }
                          }
                          color="#000"
                          disabled={false}
                          fill={false}
                          onClick={[Function]}
                          onComplete={[Function]}
                          overflow={false}
                          size={null}
                        >
                          <div
                            className="ui-shared__ripple css-ugy6xl"
                            data-test-id="Ripple"
                            onClick={[Function]}
                            style={null}
                          >
                            <Cross
                              size={24}
                            >
                              <Icon
                                content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                                size={24}
                              >
                                <svg
                                  className="tss-1n8b10t-root common__icon"
                                  dangerouslySetInnerHTML={
                                    {
                                      "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                                    }
                                  }
                                  style={
                                    {
                                      "fill": undefined,
                                      "fontSize": 24,
                                    }
                                  }
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                />
                              </Icon>
                            </Cross>
                          </div>
                        </Ripple>
                      </RippleWithStyles>
                    </button>
                    <GridItemWithStyles
                      className="css-1mjy0de"
                      component="div"
                      grow={1}
                      role="heading"
                      tabIndex={0}
                    >
                      <GridItem
                        className="tss-rttrxi-GridItem-root css-1mjy0de"
                        classes={
                          {
                            "root": "tss-rttrxi-GridItem-root",
                          }
                        }
                        component="div"
                        grow={1}
                        role="heading"
                        shrink={1}
                        tabIndex={0}
                      >
                        <div
                          className="tss-rttrxi-GridItem-root css-1mjy0de tss-rttrxi-GridItem-root css-1mjy0de common__grid__item--custom-flex"
                          role="heading"
                          tabIndex={0}
                        >
                          Test-Title
                        </div>
                      </GridItem>
                    </GridItemWithStyles>
                  </div>
                </Grid>
              </GridWithStyles>
            </div>
          </Header>
          <div
            className="css-13azwyo"
          >
            <ProgressBar
              isVisible={false}
            >
              <Transition
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={150}
                unmountOnExit={false}
              >
                <div
                  className="css-guf25f ui-shared__progress-bar"
                  style={
                    {
                      "transform": "scale(1, 0)",
                    }
                  }
                >
                  <div
                    className="css-1sisfcf"
                  />
                </div>
              </Transition>
            </ProgressBar>
          </div>
          <div
            className="css-1pp3d82"
            onScroll={[Function]}
          >
            <div
              key=".0"
            >
              Test
            </div>
          </div>
        </div>
      </Drawer>
    </DrawerWithStyles>
    <Backdrop
      className=""
      color="#000"
      duration={200}
      isVisible={true}
      level={4}
      lockBodyScroll={true}
      onClick={[Function]}
      opacity={20}
    >
      <Transition
        appear={true}
        enter={true}
        exit={true}
        in={true}
        mountOnEnter={true}
        nodeRef={
          {
            "current": <div
              aria-hidden="true"
              class="tss-1tlnanp-backdrop  common__backdrop"
              data-test-id="Backdrop"
              style="background: rgb(0, 0, 0); z-index: 4; transition: opacity 200ms ease-out; opacity: 0.2; pointer-events: auto;"
            />,
          }
        }
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={200}
        unmountOnExit={true}
      >
        <div
          aria-hidden={true}
          className="tss-1tlnanp-backdrop  common__backdrop"
          data-test-id="Backdrop"
          onClick={[Function]}
          style={
            {
              "background": "#000",
              "opacity": 0.2,
              "pointerEvents": "auto",
              "transition": "opacity 200ms ease-out",
              "zIndex": 4,
            }
          }
        />
      </Transition>
    </Backdrop>
  </section>
</Sheet>
`;

exports[`<Sheet /> should render closed without content 1`] = `
<section
  className="ui-shared__sheet"
>
  <DrawerWithStyles
    animation={
      {
        "duration": 300,
        "in": "css-1ldjh2f",
        "out": "css-171mdnt",
      }
    }
    className="css-1447nbj"
    isOpen={false}
    onClose={[Function]}
    onDidClose={[Function]}
    onDidOpen={[Function]}
    onOpen={[Function]}
  >
    <div
      className="css-13azwyo"
    >
      <ProgressBar
        isVisible={false}
      />
    </div>
    <div
      className="css-1pp3d82"
      onScroll={[Function]}
    />
  </DrawerWithStyles>
  <Backdrop
    className=""
    color="#000"
    duration={200}
    isVisible={false}
    level={4}
    lockBodyScroll={true}
    onClick={[Function]}
    opacity={20}
  />
</section>
`;

exports[`<Sheet /> should render opened without content 1`] = `
<section
  className="ui-shared__sheet css-1owavz5"
>
  <DrawerWithStyles
    animation={
      {
        "duration": 300,
        "in": "css-1ldjh2f",
        "out": "css-171mdnt",
      }
    }
    className="css-1447nbj"
    isOpen={true}
    onClose={[Function]}
    onDidClose={[Function]}
    onDidOpen={[Function]}
    onOpen={[Function]}
  >
    <div
      className="css-13azwyo"
    >
      <ProgressBar
        isVisible={false}
      />
    </div>
    <div
      className="css-1pp3d82"
      onScroll={[Function]}
    />
  </DrawerWithStyles>
  <Backdrop
    className=""
    color="#000"
    duration={200}
    isVisible={true}
    level={4}
    lockBodyScroll={true}
    onClick={[Function]}
    opacity={20}
  />
</section>
`;

exports[`<Sheet /> should render with content and title 1`] = `
<section
  className="ui-shared__sheet css-1owavz5"
>
  <DrawerWithStyles
    animation={
      {
        "duration": 300,
        "in": "css-1ldjh2f",
        "out": "css-171mdnt",
      }
    }
    className="css-1447nbj"
    isOpen={true}
    onClose={[Function]}
    onDidClose={[Function]}
    onDidOpen={[Function]}
    onOpen={[Function]}
  >
    <Header
      allowClose={true}
      handleChange={[Function]}
      onToggleClose={[Function]}
      shadow={false}
      showSearch={false}
      title="Test-Title"
    />
    <div
      className="css-13azwyo"
    >
      <ProgressBar
        isVisible={false}
      />
    </div>
    <div
      className="css-1pp3d82"
      onScroll={[Function]}
    >
      <div
        key=".0"
      >
        Test
      </div>
    </div>
  </DrawerWithStyles>
  <Backdrop
    className=""
    color="#000"
    duration={200}
    isVisible={true}
    level={4}
    lockBodyScroll={true}
    onClick={[Function]}
    opacity={20}
  />
</section>
`;

exports[`<Sheet /> should trigger onClose callback and close the Sheet 1`] = `
<Sheet
  allowClose={true}
  animation={{}}
  backdrop={true}
  className={null}
  contentClassName={null}
  duration={300}
  isLoading={false}
  isOpen={true}
  onClose={
    [MockFunction] {
      "calls": [
        [],
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
  showSearch={false}
  title="Test-Title"
>
  <section
    className="ui-shared__sheet"
  >
    <DrawerWithStyles
      animation={
        {
          "duration": 300,
          "in": "css-1ldjh2f",
          "out": "css-171mdnt",
        }
      }
      className="css-1447nbj"
      isOpen={false}
      onClose={[Function]}
      onDidClose={[Function]}
      onDidOpen={[Function]}
      onOpen={[Function]}
    >
      <Drawer
        animation={
          {
            "duration": 300,
            "in": "css-1ldjh2f",
            "out": "css-171mdnt",
          }
        }
        className="css-1447nbj"
        classes={
          {
            "animationIn": "tss-25le8d-Drawer-animationIn",
            "animationOut": "tss-1lx1x7x-Drawer-animationOut",
            "container": "tss-2b150r-Drawer-container",
          }
        }
        isOpen={false}
        onClose={[Function]}
        onDidClose={[Function]}
        onDidOpen={[Function]}
        onOpen={[Function]}
      >
        <div
          aria-modal={true}
          className="css-1447nbj tss-2b150r-Drawer-container css-171mdnt common__drawer"
          onAnimationEnd={[Function]}
          role="dialog"
          style={
            {
              "animationDuration": "300ms",
            }
          }
          tabIndex={-1}
        >
          <Header
            allowClose={true}
            handleChange={[Function]}
            onToggleClose={[Function]}
            shadow={false}
            showSearch={false}
            title="Test-Title"
          >
            <div
              className=""
            >
              <GridWithStyles
                className="css-1hncgty"
                component="div"
                wrap={false}
              >
                <Grid
                  className="css-1hncgty"
                  classes={
                    {
                      "noWrap": "tss-18pnfnt-Grid-noWrap",
                      "root": "tss-ttd1ja-Grid-root",
                      "wrap": "tss-xzd4nf-Grid-wrap",
                    }
                  }
                  component="div"
                  wrap={false}
                >
                  <div
                    className="css-1hncgty tss-ttd1ja-Grid-root css-1hncgty common__grid tss-18pnfnt-Grid-noWrap"
                    classes={
                      {
                        "noWrap": "tss-18pnfnt-Grid-noWrap",
                        "root": "tss-ttd1ja-Grid-root",
                        "wrap": "tss-xzd4nf-Grid-wrap",
                      }
                    }
                  >
                    <button
                      aria-label="common.close"
                      className="css-r4gt00"
                      onClick={[Function]}
                      type="button"
                    >
                      <RippleWithStyles
                        className="css-ugy6xl"
                      >
                        <Ripple
                          className="css-ugy6xl"
                          classes={
                            {
                              "container": "tss-1dfkr3n-Ripple-container",
                            }
                          }
                          color="#000"
                          disabled={false}
                          fill={false}
                          onClick={[Function]}
                          onComplete={[Function]}
                          overflow={false}
                          size={null}
                        >
                          <div
                            className="ui-shared__ripple css-ugy6xl"
                            data-test-id="Ripple"
                            onClick={[Function]}
                            style={null}
                          >
                            <Cross
                              size={24}
                            >
                              <Icon
                                content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                                size={24}
                              >
                                <svg
                                  className="tss-1n8b10t-root common__icon"
                                  dangerouslySetInnerHTML={
                                    {
                                      "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                                    }
                                  }
                                  style={
                                    {
                                      "fill": undefined,
                                      "fontSize": 24,
                                    }
                                  }
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                />
                              </Icon>
                            </Cross>
                          </div>
                        </Ripple>
                      </RippleWithStyles>
                    </button>
                    <GridItemWithStyles
                      className="css-1mjy0de"
                      component="div"
                      grow={1}
                      role="heading"
                      tabIndex={0}
                    >
                      <GridItem
                        className="tss-rttrxi-GridItem-root css-1mjy0de"
                        classes={
                          {
                            "root": "tss-rttrxi-GridItem-root",
                          }
                        }
                        component="div"
                        grow={1}
                        role="heading"
                        shrink={1}
                        tabIndex={0}
                      >
                        <div
                          className="tss-rttrxi-GridItem-root css-1mjy0de tss-rttrxi-GridItem-root css-1mjy0de common__grid__item--custom-flex"
                          role="heading"
                          tabIndex={0}
                        >
                          Test-Title
                        </div>
                      </GridItem>
                    </GridItemWithStyles>
                  </div>
                </Grid>
              </GridWithStyles>
            </div>
          </Header>
          <div
            className="css-13azwyo"
          >
            <ProgressBar
              isVisible={false}
            >
              <Transition
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={150}
                unmountOnExit={false}
              >
                <div
                  className="css-guf25f ui-shared__progress-bar"
                  style={
                    {
                      "transform": "scale(1, 0)",
                    }
                  }
                >
                  <div
                    className="css-1sisfcf"
                  />
                </div>
              </Transition>
            </ProgressBar>
          </div>
          <div
            className="css-1pp3d82"
            onScroll={[Function]}
          >
            <div
              key=".0"
            >
              Test
            </div>
          </div>
        </div>
      </Drawer>
    </DrawerWithStyles>
    <Backdrop
      className=""
      color="#000"
      duration={200}
      isVisible={false}
      level={4}
      lockBodyScroll={true}
      onClick={[Function]}
      opacity={20}
    >
      <Transition
        appear={true}
        enter={true}
        exit={true}
        in={false}
        mountOnEnter={true}
        nodeRef={
          {
            "current": null,
          }
        }
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        timeout={200}
        unmountOnExit={true}
      >
        <div
          aria-hidden={true}
          className="tss-1tlnanp-backdrop  common__backdrop"
          data-test-id="Backdrop"
          onClick={[Function]}
          style={
            {
              "background": "#000",
              "opacity": 0,
              "pointerEvents": "none",
              "transition": "opacity 200ms ease-out",
              "zIndex": 4,
            }
          }
        />
      </Transition>
    </Backdrop>
  </section>
</Sheet>
`;
